--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+        <!-- Begin Page Header -->
+        <div class="header">
+          <div class="container">
+            <div class="row">
+              <!-- Page Title -->
+              <div class="col-sm-6 col-xs-12">
+                <h1>404 Default</h1>
+              </div>
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+              <!-- Breadcrumbs -->
+              <div class="col-sm-6">
+                <ol class="breadcrumb">
+                  <li><span class="ion-home breadcrumb-home"></span><a href="index.html">Home</a></li>
+                  <li>Pages</li>
+                  <li>404 Default</li>
+                </ol>
+              </div><!-- /column -->  
+            </div><!-- /row -->  
+          </div><!-- /container -->  
+        </div><!-- /page header -->  
+        
+      </header><!-- /header -->
+      <!-- End Header -->
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+      <!-- Begin Content -->
+      <div class="mt100 mb100">
+        <div class="container">
 
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
+          <div class="row">
 
-<body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
-</html>
+            <!-- Begin Login -->
+            <div class="col-sm-12 text-center flipInY-animated">
+              <p><mark class="lead heavy no-margin">The page could not be found.</mark></p>
+              <div class="error-404">
+                <span class="ion-alert-circled"></span>404
+                <p class="lead">Whoops! Seems you've ended up in the wrong place. You should go home.</p>
+              </div>
+            </div>
+
+          </div><!-- /row -->
+
+        </div><!-- /container -->
+      </div><!-- /content -->
+      <!-- End Content -->
